@@ -214,6 +214,9 @@
 /* Define if getenv is not declared in system header files. */
 #undef NEED_DECLARATION_GETENV
 
+/* Define if struct core_dumpx has member c_impl */
+#undef HAVE_ST_C_IMPL
+
 /* Define if <sys/procfs.h> has prstatus_t. */
 #undef HAVE_PRSTATUS_T
 
