@@ -1,28 +1,31 @@
 /* IBM RS/6000 "XCOFF" back-end for BFD.
    Copyright 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000,
-   2001, 2002, 2004, 2005, 2006, 2007, 2008, 2009
+   2001, 2002
    Free Software Foundation, Inc.
-   Written by Metin G. Ozisik, Mimi Phuong-Thao Vo, and John Gilmore.
+   FIXME: Can someone provide a transliteration of this name into ASCII?
+   Using the following chars caused a compiler warning on HIUX (so I replaced
+   them with octal escapes), and isn't useful without an understanding of what
+   character set it is.
+   Written by Metin G. Ozisik, Mimi Ph\373\364ng-Th\345o V\365,
+     and John Gilmore.
    Archive support from Damon A. Permezel.
    Contributed by IBM Corporation and Cygnus Support.
 
-   This file is part of BFD, the Binary File Descriptor library.
+This file is part of BFD, the Binary File Descriptor library.
 
-   This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 3 of the License, or
-   (at your option) any later version.
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
 
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
 
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
-   MA 02110-1301, USA.  */
-
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
 /* This port currently only handles reading object files, except when
    compiled on an RS/6000 host.  -- no archive support, no core files.
@@ -41,8 +44,8 @@
 #define _LONG_LONG
 #endif
 
-#include "sysdep.h"
 #include "bfd.h"
+#include "sysdep.h"
 #include "libbfd.h"
 
 #ifdef AIX_CORE
@@ -67,9 +70,6 @@
 #include <sys/ldr.h>
 #include <sys/core.h>
 #include <sys/systemcfg.h>
-
-/* Borrowed from <sys/inttypes.h> on recent AIX versions.  */
-typedef unsigned long ptr_to_uint;
 
 #define	core_hdr(bfd)		((CoreHdr *) bfd->tdata.any)
 
@@ -107,9 +107,9 @@ typedef union {
 
 typedef union {
 #ifdef AIX_CORE_DUMPX_CORE
-  struct core_dumpx new_dump;	/* new AIX 4.3+ core dump */
+  struct core_dumpx new;	/* new AIX 4.3+ core dump */
 #else
-  struct core_dump new_dump;		/* for simpler coding */
+  struct core_dump new;		/* for simpler coding */
 #endif
   struct core_dump old;		/* old AIX 4.2- core dump, still used on
 				   4.3+ with appropriate SMIT config */
@@ -120,9 +120,9 @@ typedef union {
 #ifdef CORE_VERSION_1
 typedef union {
 #ifdef AIX_CORE_DUMPX_CORE
-  struct vm_infox new_dump;
+  struct vm_infox new;
 #else
-  struct vm_info new_dump;
+  struct vm_info new;
 #endif
   struct vm_info old;
 } VmInfo;
@@ -134,19 +134,6 @@ typedef union {
 # define CORE_NEW(c)	(!(c).old.c_entries)
 #else
 # define CORE_NEW(c)	0
-#endif
-
-/* Return whether CoreHdr C usese core_dumpxx structure.
-
-   FIXME: the core file format version number used here definitely indicates
-   that struct core_dumpxx should be used to represent the core file header,
-   but that may not be the only such format version number.  */
-
-#ifdef AIX_5_CORE
-# define CORE_DUMPXX_VERSION  	267312562
-# define CNEW_IS_CORE_DUMPXX(c) ((c).new_dump.c_version == CORE_DUMPXX_VERSION)
-#else
-# define CNEW_IS_CORE_DUMPXX(c) 0
 #endif
 
 /* Return the c_stackorg field from struct core_dumpx C.  */
@@ -263,35 +250,26 @@ typedef union {
 #define CORE_COMMONSZ	((int) &((struct core_dump *) 0)->c_entries \
 			 + sizeof (((struct core_dump *) 0)->c_entries))
 
-/* Define prototypes for certain functions, to avoid a compiler warning
-   saying that they are missing.  */
-
-const bfd_target * rs6000coff_core_p (bfd *abfd);
-bfd_boolean rs6000coff_core_file_matches_executable_p (bfd *core_bfd,
-                                                       bfd *exec_bfd);
-char * rs6000coff_core_file_failing_command (bfd *abfd);
-int rs6000coff_core_file_failing_signal (bfd *abfd);
-
 /* Try to read into CORE the header from the core file associated with ABFD.
    Return success.  */
 
-static bfd_boolean
+static boolean
 read_hdr (bfd *abfd, CoreHdr *core)
 {
   bfd_size_type size;
 
   if (bfd_seek (abfd, (file_ptr) 0, SEEK_SET) != 0)
-    return FALSE;
+    return false;
 
   /* Read the leading portion that old and new core dump structures have in
      common.  */
   size = CORE_COMMONSZ;
   if (bfd_bread (core, size, abfd) != size)
-    return FALSE;
+    return false;
 
   /* Read the trailing portion of the structure.  */
   if (CORE_NEW (*core))
-    size = sizeof (core->new_dump);
+    size = sizeof (core->new);
   else
     size = sizeof (core->old);
   size -= CORE_COMMONSZ;
@@ -299,16 +277,22 @@ read_hdr (bfd *abfd, CoreHdr *core)
 }
 
 static asection *
-make_bfd_asection (bfd *abfd, const char *name, flagword flags,
-		   bfd_size_type size, bfd_vma vma, file_ptr filepos)
+make_bfd_asection (abfd, name, flags, _raw_size, vma, filepos)
+     bfd *abfd;
+     const char *name;
+     flagword flags;
+     bfd_size_type _raw_size;
+     bfd_vma vma;
+     file_ptr filepos;
 {
   asection *asect;
 
-  asect = bfd_make_section_anyway_with_flags (abfd, name, flags);
+  asect = bfd_make_section_anyway (abfd, name);
   if (!asect)
     return NULL;
 
-  asect->size = size;
+  asect->flags = flags;
+  asect->_raw_size = _raw_size;
   asect->vma = vma;
   asect->filepos = filepos;
   asect->alignment_power = 8;
@@ -320,7 +304,8 @@ make_bfd_asection (bfd *abfd, const char *name, flagword flags,
    magic number or anything like, in rs6000coff.  */
 
 const bfd_target *
-rs6000coff_core_p (bfd *abfd)
+rs6000coff_core_p (abfd)
+     bfd *abfd;
 {
   CoreHdr core;
   struct stat statbuf;
@@ -342,44 +327,37 @@ rs6000coff_core_p (bfd *abfd)
       return NULL;
     }
 
-  /* This isn't the right handler for 64-bit core files on AIX 5.x.  */
-  if (CORE_NEW (core) && CNEW_IS_CORE_DUMPXX (core))
-    {
-      bfd_set_error (bfd_error_wrong_format);
-      return NULL;
-    }
-
   /* Copy fields from new or old core structure.  */
   if (CORE_NEW (core))
     {
-      c_flag = core.new_dump.c_flag;
-      c_stack = (file_ptr) core.new_dump.c_stack;
-      c_size = core.new_dump.c_size;
-      c_stackend = CNEW_STACKORG (core.new_dump) + c_size;
-      c_lsize = CNEW_LSIZE (core.new_dump);
-      c_loader = CNEW_LOADER (core.new_dump);
-      proc64 = CNEW_PROC64 (core.new_dump);
+      c_flag = core.new.c_flag;
+      c_stack = (file_ptr) core.new.c_stack;
+      c_size = core.new.c_size;
+      c_stackend = CNEW_STACKORG (core.new) + c_size;
+      c_lsize = CNEW_LSIZE (core.new);
+      c_loader = CNEW_LOADER (core.new);
+      proc64 = CNEW_PROC64 (core.new);
     }
   else
     {
       c_flag = core.old.c_flag;
-      c_stack = (file_ptr) (ptr_to_uint) core.old.c_stack;
+      c_stack = (file_ptr) core.old.c_stack;
       c_size = core.old.c_size;
       c_stackend = COLD_STACKEND;
       c_lsize = 0x7ffffff;
-      c_loader = (file_ptr) (ptr_to_uint) COLD_LOADER (core.old);
+      c_loader = (file_ptr) COLD_LOADER (core.old);
       proc64 = 0;
     }
 
   if (proc64)
     {
-      c_regsize = sizeof (CNEW_CONTEXT64 (core.new_dump));
-      c_regptr = &CNEW_CONTEXT64 (core.new_dump);
+      c_regsize = sizeof (CNEW_CONTEXT64 (core.new));
+      c_regptr = &CNEW_CONTEXT64 (core.new);
     }
   else if (CORE_NEW (core))
     {
-      c_regsize = sizeof (CNEW_MSTSAVE (core.new_dump));
-      c_regptr = &CNEW_MSTSAVE (core.new_dump);
+      c_regsize = sizeof (CNEW_MSTSAVE (core.new));
+      c_regptr = &CNEW_MSTSAVE (core.new);
     }
   else
     {
@@ -449,7 +427,7 @@ rs6000coff_core_p (bfd *abfd)
 			   bfd_get_filename (abfd));
 
   /* Allocate core file header.  */
-  size = CORE_NEW (core) ? sizeof (core.new_dump) : sizeof (core.old);
+  size = CORE_NEW (core) ? sizeof (core.new) : sizeof (core.old);
   tmpptr = (char *) bfd_zalloc (abfd, (bfd_size_type) size);
   if (!tmpptr)
     return NULL;
@@ -464,7 +442,7 @@ rs6000coff_core_p (bfd *abfd)
       enum bfd_architecture arch;
       unsigned long mach;
 
-      switch (CNEW_IMPL (core.new_dump))
+      switch (CNEW_IMPL (core.new))
 	{
 	case POWER_RS1:
 	case POWER_RSC:
@@ -537,17 +515,17 @@ rs6000coff_core_p (bfd *abfd)
 
     if (CORE_NEW (core))
       {
-	c_datasize = CNEW_DATASIZE (core.new_dump);
-	c_data = (file_ptr) core.new_dump.c_data;
-	c_vmregions = core.new_dump.c_vmregions;
-	c_vmm = (file_ptr) core.new_dump.c_vmm;
+	c_datasize = CNEW_DATASIZE (core.new);
+	c_data = (file_ptr) core.new.c_data;
+	c_vmregions = core.new.c_vmregions;
+	c_vmm = (file_ptr) core.new.c_vmm;
       }
     else
       {
 	c_datasize = core.old.c_datasize;
-	c_data = (file_ptr) (ptr_to_uint) core.old.c_data;
+	c_data = (file_ptr) core.old.c_data;
 	c_vmregions = core.old.c_vmregions;
-	c_vmm = (file_ptr) (ptr_to_uint) core.old.c_vmm;
+	c_vmm = (file_ptr) core.old.c_vmm;
       }
 
     /* .data section from executable.  */
@@ -615,15 +593,15 @@ rs6000coff_core_p (bfd *abfd)
 	    file_ptr vminfo_offset;
 	    bfd_vma vminfo_addr;
 
-	    size = CORE_NEW (core) ? sizeof (vminfo.new_dump) : sizeof (vminfo.old);
+	    size = CORE_NEW (core) ? sizeof (vminfo.new) : sizeof (vminfo.old);
 	    if (bfd_bread (&vminfo, size, abfd) != size)
 	      goto fail;
 
 	    if (CORE_NEW (core))
 	      {
-		vminfo_addr = (bfd_vma) vminfo.new_dump.vminfo_addr;
-		vminfo_size = vminfo.new_dump.vminfo_size;
-		vminfo_offset = vminfo.new_dump.vminfo_offset;
+		vminfo_addr = (bfd_vma) vminfo.new.vminfo_addr;
+		vminfo_size = vminfo.new.vminfo_size;
+		vminfo_offset = vminfo.new.vminfo_offset;
 	      }
 	    else
 	      {
@@ -652,39 +630,41 @@ rs6000coff_core_p (bfd *abfd)
   return NULL;
 }
 
-/* Return `TRUE' if given core is from the given executable.  */
+/* Return `true' if given core is from the given executable.  */
 
-bfd_boolean
-rs6000coff_core_file_matches_executable_p (bfd *core_bfd, bfd *exec_bfd)
+boolean
+rs6000coff_core_file_matches_executable_p (core_bfd, exec_bfd)
+     bfd *core_bfd;
+     bfd *exec_bfd;
 {
   CoreHdr core;
   bfd_size_type size;
   char *path, *s;
   size_t alloc;
   const char *str1, *str2;
-  bfd_boolean ret;
+  boolean ret;
   file_ptr c_loader;
 
   if (!read_hdr (core_bfd, &core))
-    return FALSE;
+    return false;
 
   if (CORE_NEW (core))
-    c_loader = CNEW_LOADER (core.new_dump);
+    c_loader = CNEW_LOADER (core.new);
   else
-    c_loader = (file_ptr) (ptr_to_uint) COLD_LOADER (core.old);
+    c_loader = (file_ptr) COLD_LOADER (core.old);
 
-  if (CORE_NEW (core) && CNEW_PROC64 (core.new_dump))
+  if (CORE_NEW (core) && CNEW_PROC64 (core.new))
     size = (int) ((LdInfo *) 0)->l64.ldinfo_filename;
   else
     size = (int) ((LdInfo *) 0)->l32.ldinfo_filename;
 
   if (bfd_seek (core_bfd, c_loader + size, SEEK_SET) != 0)
-    return FALSE;
+    return false;
 
   alloc = 100;
   path = bfd_malloc ((bfd_size_type) alloc);
   if (path == NULL)
-    return FALSE;
+    return false;
   s = path;
 
   while (1)
@@ -692,7 +672,7 @@ rs6000coff_core_file_matches_executable_p (bfd *core_bfd, bfd *exec_bfd)
       if (bfd_bread (s, (bfd_size_type) 1, core_bfd) != 1)
 	{
 	  free (path);
-	  return FALSE;
+	  return false;
 	}
       if (*s == '\0')
 	break;
@@ -706,7 +686,7 @@ rs6000coff_core_file_matches_executable_p (bfd *core_bfd, bfd *exec_bfd)
 	  if (n == NULL)
 	    {
 	      free (path);
-	      return FALSE;
+	      return false;
 	    }
 	  s = n + (path - s);
 	  path = n;
@@ -721,9 +701,9 @@ rs6000coff_core_file_matches_executable_p (bfd *core_bfd, bfd *exec_bfd)
   str2 = str2 != NULL ? str2 + 1 : exec_bfd->filename;
 
   if (strcmp (str1, str2) == 0)
-    ret = TRUE;
+    ret = true;
   else
-    ret = FALSE;
+    ret = false;
 
   free (path);
 
@@ -731,11 +711,12 @@ rs6000coff_core_file_matches_executable_p (bfd *core_bfd, bfd *exec_bfd)
 }
 
 char *
-rs6000coff_core_file_failing_command (bfd *abfd)
+rs6000coff_core_file_failing_command (abfd)
+     bfd *abfd;
 {
   CoreHdr *core = core_hdr (abfd);
   char *com = CORE_NEW (*core) ?
-    CNEW_COMM (core->new_dump) : COLD_COMM (core->old);
+    CNEW_COMM (core->new) : COLD_COMM (core->old);
 
   if (*com)
     return com;
@@ -744,10 +725,11 @@ rs6000coff_core_file_failing_command (bfd *abfd)
 }
 
 int
-rs6000coff_core_file_failing_signal (bfd *abfd)
+rs6000coff_core_file_failing_signal (abfd)
+     bfd *abfd;
 {
   CoreHdr *core = core_hdr (abfd);
-  return CORE_NEW (*core) ? core->new_dump.c_signo : core->old.c_signo;
+  return CORE_NEW (*core) ? core->new.c_signo : core->old.c_signo;
 }
 
 #endif /* AIX_CORE */
