@@ -1,3 +1,11 @@
+2002-05-13  David Edelsohn  <edelsohn@gnu.org>
+
+	* configure.in: Auto-configure HAVE_ST_C_IMPL.
+	* configure: Regenerate.
+	* config.in: Regenerate.
+	* rs6000-core.c (CNEW_IMPL): Guard use of c_impl with HAVE_ST_C_IMPL
+	or AIX_5_CORE.
+
 2002-05-11  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline (to elf32-mips.c):
